--- a/index.html
+++ b/index.html
@@ -873,9 +873,12 @@ Pick the map that is most different?
 
 ---
 
-class: bg-beep-green, center
+class: bg-deep-green, center
 
-&lt;img src="figures/pilot/skobakian_design.png" width="600px" height="350px" /&gt;
+# Experimental Design
+
+&lt;img src="figures/pilot/skobakian_design.png" width="700px" height="450px" /&gt;
+
 ---
 
 class: bg-black, center
